# pokenail

./: .gitignore  README.md  README.org  a.py  actions.py  ai_agent.py  config.py  env.py  game_controller.py  game_state.save  global_map.py  main.py  notes.org  pyproject.toml  q_table_checkpoint_0.pkl  q_table_checkpoint_100.pkl  q_table_checkpoint_200.pkl  q_table_checkpoint_300.pkl  q_table_checkpoint_400.pkl  q_table_checkpoint_500.pkl  q_table_checkpoint_600.pkl  q_table_checkpoint_700.pkl  q_table_checkpoint_800.pkl  q_table_checkpoint_900.pkl  q_table_final.pkl  red.gb.ram  replay_buffer.py  requirements.txt  run_on_pyboy.py  test_q.py  utils.py  viz.py  viz_all_cumulative.py  viz_q.py  web_viz.py
saves/: before_oaks_parcel.save  before_pokedex.save  squirt_two.save  start.save  with_oaks_parcel.save
