[project]
name = "pokenail"
version = "0.1.0"
description = "AI learns Pokémon Red"
authors = [
    {name = "orge-dev"},
]
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "numpy==2.1.3",
    "pyboy==2.4.0",
    "PySDL2==0.9.16",
    "pysdl2-dll==2.30.2",
    "setuptools==75.1.0",
    "typing_extensions==4.12.2",
    "wheel==0.44.0",
    "tqdm==4.67.0",
    "matplotlib==3.9.2",
    "websockets==14.1"
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pyright]
typeCheckingMode = "standard"